apps/redis-app/overlays/dev/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-app-external
  namespace: redis-platform
spec:
  type: LoadBalancer
  selector:
    app: redis-app
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
